--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-<h3>ログインフォーム</h3>
+<h3>Login form</h3>
 
 <p th:if="${param.error}">
     Error!
@@ -24,7 +24,7 @@
         <tr>
             <td>&nbsp;</td>
             <td>
-                <button type="submit">ログイン</button>
+                <button type="submit">Login</button>
             </td>
         </tr>
     </table>
